changing design/renderings

--- a/public/projects/sommetBlancTest/amenities/amenities.html
+++ b/public/projects/sommetBlancTest/amenities/amenities.html
@@ -64,7 +64,7 @@ p {
 			</div>
 			<br>
 
-			<img src="projects/sommetBlancReservations/amenities/images/page_5.jpg">
+			<img src="projects/sommetBlancReservations/amenities/images/page_13.jpg">
 		    <br>
 
 		    <div style="background-color:#333; color:white; padding:5% 5%">
@@ -76,6 +76,17 @@ p {
 				<p>The après-ski lounge is unlike any other in Deer Valley. Numerous social gathering spaces anchored by two large fireplaces encourage guests to meet up and share stories of the ski day. The live-in Resident Managers will host daily après-ski happy hours for owners and their guests. The indoor lounge opens up to an expansive outdoor patio with fire pits - yet another western-facing, sunny place to relax. And for the kids, adjacent to the après-ski lounge is a children's activity playroom. A perfect place for the younger ones to gather and play games, puzzles, draw/color or watch a movie - all within sight of the parents.</p>
 
 				<p>Also located near the après-ski lounge is an executive boardroom ideal for planning a small corporate retreat or business meeting. The smaller guest office provides a quiet space to step away for a quick call or return a few emails</p>
+
+			</div>
+			<br>
+
+			<img src="projects/sommetBlancReservations/amenities/images/page_14.jpg">
+
+		    <br>
+		    <div style="background-color:#333; color:white; padding:5% 5%">
+		    	<!-- <img src="projects/sommetBlancReservations/amenities/images/snowflake_line.png"> -->
+		    	<br>
+		    	<P> Sean verbage on ski locker design goes here. Need to shrink floor plate and grow the ski locker design so that we can read the words.</P>
 
 			</div>
 			<br>
