Removes whats up from amenties title

--- a/public/projects/sommetBlancTest/amenities/amenities.html
+++ b/public/projects/sommetBlancTest/amenities/amenities.html
@@ -49,7 +49,7 @@ p {
 				<!-- <img src="projects/sommetBlancReservations/amenities/images/snowflake_line.png"> -->
 				<br>
 
-				<h3 style=" color:white" >SOMMET BLANC whats up</h3>
+				<h3 style=" color:white" >SOMMET BLANC</h3>
 				<br>
 				<p class="sub-heading">AMENITIES</p>
 
